Remove resampler module

--- a/example/unix/CMakeLists.txt
+++ b/example/unix/CMakeLists.txt
@@ -47,7 +47,6 @@ target_include_directories(sysutils PRIVATE ${TOP_DIR}/thirdparty/mbedtls/includ
 file(GLOB LITEPLAYER_CODEC_SRC src
     ${TOP_DIR}/thirdparty/codecs/mp3-pvmp3/src/*.cpp
     ${TOP_DIR}/thirdparty/codecs/aac-pvaac/*.cpp
-    ${TOP_DIR}/thirdparty/speexdsp/resample.c
 )
 set(LITEPLAYER_CORE_SRC
     ${LITEPLAYER_CODEC_SRC}
@@ -70,12 +69,10 @@ set(LITEPLAYER_CORE_SRC
     ${TOP_DIR}/library/source/liteplayer_main.c
     ${TOP_DIR}/library/source/liteplayer_listplayer.c
     ${TOP_DIR}/library/source/liteplayer_ttsplayer.c
-    ${TOP_DIR}/library/source/liteplayer_resampler.c
 )
 add_library(liteplayer_core STATIC ${LITEPLAYER_CORE_SRC})
 target_compile_options(liteplayer_core PRIVATE
     -D__amd64__
-    -DLITEPLAYER_CONFIG_SPEEXDSP_FIXED_POINT
     -DLITEPLAYER_CONFIG_SINK_FIXED_S16LE
     -DLITEPLAYER_CONFIG_AAC_SBR
     -DOSCL_IMPORT_REF= -DOSCL_EXPORT_REF= -DOSCL_UNUSED_ARG=\(void\)
@@ -83,94 +80,13 @@ target_compile_options(liteplayer_core PRIVATE
 )
 target_include_directories(liteplayer_core PRIVATE
     ${TOP_DIR}/thirdparty/codecs
-    ${TOP_DIR}/thirdparty/speexdsp
     ${TOP_DIR}/thirdparty/codecs/mp3-pvmp3/include
     ${TOP_DIR}/thirdparty/codecs/mp3-pvmp3/src
     ${TOP_DIR}/thirdparty/codecs/aac-pvaac
     ${TOP_DIR}/library/source
 )
 
-set(MBEDTLS_SRC
-    ${TOP_DIR}/thirdparty/mbedtls/library/aes.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/aesni.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/arc4.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/aria.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/asn1parse.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/asn1write.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/base64.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/bignum.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/blowfish.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/camellia.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/ccm.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/certs.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/chacha20.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/chachapoly.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/cipher.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/cipher_wrap.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/cmac.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/ctr_drbg.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/debug.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/des.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/dhm.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/ecdh.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/ecdsa.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/ecjpake.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/ecp.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/ecp_curves.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/entropy.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/entropy_poll.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/error.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/gcm.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/havege.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/hkdf.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/hmac_drbg.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/md.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/md2.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/md4.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/md5.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/md_wrap.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/memory_buffer_alloc.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/net_sockets.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/nist_kw.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/oid.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/padlock.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/pem.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/pk.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/pk_wrap.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/pkcs11.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/pkcs12.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/pkcs5.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/pkparse.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/pkwrite.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/platform.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/platform_util.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/poly1305.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/ripemd160.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/rsa.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/rsa_internal.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/sha1.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/sha256.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/sha512.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/ssl_cache.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/ssl_ciphersuites.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/ssl_cli.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/ssl_cookie.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/ssl_srv.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/ssl_ticket.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/ssl_tls.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/threading.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/timing.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/version.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/version_features.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/x509.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/x509_create.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/x509_crl.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/x509_crt.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/x509_csr.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/x509write_crt.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/x509write_csr.c
-    ${TOP_DIR}/thirdparty/mbedtls/library/xtea.c
-)
+file(GLOB MBEDTLS_SRC src ${TOP_DIR}/thirdparty/mbedtls/library/*.c)
 add_library(mbedtls STATIC ${MBEDTLS_SRC})
 target_include_directories(mbedtls PRIVATE ${TOP_DIR}/thirdparty/mbedtls/include)
 
