Build libraries with -fPIC, otherwise may link error on some platforms

--- a/example/esp32/components/sysutils/CMakeLists.txt
+++ b/example/esp32/components/sysutils/CMakeLists.txt
@@ -26,4 +26,5 @@ set(COMPONENT_SRCS
 
 register_component()
 
-target_compile_options(${COMPONENT_TARGET} PRIVATE -DOS_RTOS -DOS_FREERTOS_ESP32 -DSYSUTILS_HAVE_MBEDTLS_ENABLED)
+target_compile_options(${COMPONENT_TARGET} PRIVATE
+    -DOS_RTOS -DOS_FREERTOS_ESP32 -DSYSUTILS_HAVE_MBEDTLS_ENABLED)
