--- a/example/esp32/components/sysutils/CMakeLists.txt
+++ b/example/esp32/components/sysutils/CMakeLists.txt
@@ -1,27 +1,24 @@
-set(TOP_DIR ../../../../thirdparty/sysutils)
+set(TOP_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../../..)
+set(SYSUTILS_DIR ${TOP_DIR}/thirdparty/sysutils)
 
 set(COMPONENT_REQUIRES)
 set(COMPONENT_PRIV_REQUIRES pthread mbedtls)
 
-set(COMPONENT_ADD_INCLUDEDIRS ${TOP_DIR}/include)
+set(COMPONENT_ADD_INCLUDEDIRS ${SYSUTILS_DIR}/include)
 
 set(COMPONENT_SRCS
-    ${TOP_DIR}/osal/esp8266/os_log.c
-    ${TOP_DIR}/osal/esp8266/os_memory.c
-    ${TOP_DIR}/osal/esp8266/os_thread.c
-    ${TOP_DIR}/osal/esp8266/os_time.c
-    ${TOP_DIR}/osal/esp8266/os_timer.c
-    ${TOP_DIR}/osal/esp8266/os_misc.c
-    ${TOP_DIR}/source/cutils/memdbg.c
-    ${TOP_DIR}/source/cutils/mlooper.c
-    ${TOP_DIR}/source/cutils/mqueue.c
-    ${TOP_DIR}/source/cutils/ringbuf.c
-    ${TOP_DIR}/source/cutils/swtimer.c
-    ${TOP_DIR}/source/cipher/sha2.c
-    ${TOP_DIR}/source/cipher/hmac_sha2.c
-    ${TOP_DIR}/source/cipher/md5.c
-    ${TOP_DIR}/source/cipher/base64.c
-    ${TOP_DIR}/source/httpclient/httpclient.c
+    ${SYSUTILS_DIR}/osal/esp8266/os_log.c
+    ${SYSUTILS_DIR}/osal/esp8266/os_memory.c
+    ${SYSUTILS_DIR}/osal/esp8266/os_thread.c
+    ${SYSUTILS_DIR}/osal/esp8266/os_time.c
+    ${SYSUTILS_DIR}/osal/esp8266/os_timer.c
+    ${SYSUTILS_DIR}/osal/esp8266/os_misc.c
+    ${SYSUTILS_DIR}/source/cutils/memdbg.c
+    ${SYSUTILS_DIR}/source/cutils/mlooper.c
+    ${SYSUTILS_DIR}/source/cutils/mqueue.c
+    ${SYSUTILS_DIR}/source/cutils/ringbuf.c
+    ${SYSUTILS_DIR}/source/cutils/swtimer.c
+    ${SYSUTILS_DIR}/source/httpclient/httpclient.c
 )
 
 register_component()
