Optimize file structure

--- a/example/esp32/components/liteplayer_core/CMakeLists.txt
+++ b/example/esp32/components/liteplayer_core/CMakeLists.txt
@@ -1,11 +1,11 @@
 set(TOP_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../../..)
-set(LITEPLAYER_DIR ${TOP_DIR}/library)
+set(LITEPLAYER_DIR ${TOP_DIR}/src)
 set(THIRDPARTY_DIR ${TOP_DIR}/thirdparty)
 
 set(COMPONENT_REQUIRES)
 set(COMPONENT_PRIV_REQUIRES sysutils)
 
-set(COMPONENT_ADD_INCLUDEDIRS ${LITEPLAYER_DIR}/include)
+set(COMPONENT_ADD_INCLUDEDIRS ${TOP_DIR}/include)
 
 set(COMPONENT_PRIV_INCLUDEDIRS
     ${THIRDPARTY_DIR}/sysutils/include
@@ -13,7 +13,7 @@ set(COMPONENT_PRIV_INCLUDEDIRS
     ${THIRDPARTY_DIR}/codecs/mp3-pvmp3/include
     ${THIRDPARTY_DIR}/codecs/mp3-pvmp3/src
     ${THIRDPARTY_DIR}/codecs/aac-pvaac
-    ${LITEPLAYER_DIR}/source
+    ${LITEPLAYER_DIR}
 )
 
 file(GLOB CODECS_SRCS src
@@ -22,24 +22,24 @@ file(GLOB CODECS_SRCS src
 )
 
 set(COMPONENT_SRCS
-    ${LITEPLAYER_DIR}/source/esp_adf/audio_element.c
-    ${LITEPLAYER_DIR}/source/esp_adf/audio_event_iface.c
-    ${LITEPLAYER_DIR}/source/audio_decoder/mp3_pvmp3_wrapper.c
-    ${LITEPLAYER_DIR}/source/audio_decoder/mp3_decoder.c
-    ${LITEPLAYER_DIR}/source/audio_decoder/aac_pvaac_wrapper.c
-    ${LITEPLAYER_DIR}/source/audio_decoder/aac_decoder.c
-    ${LITEPLAYER_DIR}/source/audio_decoder/m4a_decoder.c
-    ${LITEPLAYER_DIR}/source/audio_decoder/wav_decoder.c
-    ${LITEPLAYER_DIR}/source/audio_extractor/mp3_extractor.c
-    ${LITEPLAYER_DIR}/source/audio_extractor/aac_extractor.c
-    ${LITEPLAYER_DIR}/source/audio_extractor/m4a_extractor.c
-    ${LITEPLAYER_DIR}/source/audio_extractor/wav_extractor.c
-    ${LITEPLAYER_DIR}/source/liteplayer_adapter.c
-    ${LITEPLAYER_DIR}/source/liteplayer_source.c
-    ${LITEPLAYER_DIR}/source/liteplayer_parser.c
-    ${LITEPLAYER_DIR}/source/liteplayer_main.c
-    ${LITEPLAYER_DIR}/source/liteplayer_listplayer.c
-    ${LITEPLAYER_DIR}/source/liteplayer_ttsplayer.c
+    ${LITEPLAYER_DIR}/esp_adf/audio_element.c
+    ${LITEPLAYER_DIR}/esp_adf/audio_event_iface.c
+    ${LITEPLAYER_DIR}/audio_decoder/mp3_pvmp3_wrapper.c
+    ${LITEPLAYER_DIR}/audio_decoder/mp3_decoder.c
+    ${LITEPLAYER_DIR}/audio_decoder/aac_pvaac_wrapper.c
+    ${LITEPLAYER_DIR}/audio_decoder/aac_decoder.c
+    ${LITEPLAYER_DIR}/audio_decoder/m4a_decoder.c
+    ${LITEPLAYER_DIR}/audio_decoder/wav_decoder.c
+    ${LITEPLAYER_DIR}/audio_extractor/mp3_extractor.c
+    ${LITEPLAYER_DIR}/audio_extractor/aac_extractor.c
+    ${LITEPLAYER_DIR}/audio_extractor/m4a_extractor.c
+    ${LITEPLAYER_DIR}/audio_extractor/wav_extractor.c
+    ${LITEPLAYER_DIR}/liteplayer_adapter.c
+    ${LITEPLAYER_DIR}/liteplayer_source.c
+    ${LITEPLAYER_DIR}/liteplayer_parser.c
+    ${LITEPLAYER_DIR}/liteplayer_main.c
+    ${LITEPLAYER_DIR}/liteplayer_listplayer.c
+    ${LITEPLAYER_DIR}/liteplayer_ttsplayer.c
     ${CODECS_SRCS}
 )
 
@@ -56,3 +56,7 @@ target_compile_options(${COMPONENT_TARGET} PRIVATE
     -Wno-error=narrowing
     -Wno-error=int-to-pointer-cast
 )
+
+IF(IDF_VERSION_MAJOR GREATER 3)
+    target_compile_options(${COMPONENT_TARGET} PRIVATE -Wno-error=implicit-fallthrough)
+ENDIF()
