--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -fPIC -std=gnu99 -Wall -Werror -DOS_APPL
 
 # include files
 include_directories(${TOP_DIR}/thirdparty/sysutils/include)
-include_directories(${TOP_DIR}/library/include)
+include_directories(${TOP_DIR}/include)
 
 # liteplayer files
 set(CODECS_SRC
@@ -53,25 +53,25 @@ set(CODECS_SRC
     ${TOP_DIR}/thirdparty/codecs/aac-helix/trigtabs.c)
 set(LITEPLAYER_SRC
     ${CODECS_SRC}
-    ${TOP_DIR}/library/source/esp_adf/audio_element.c
-    ${TOP_DIR}/library/source/esp_adf/audio_event_iface.c
-    ${TOP_DIR}/library/source/audio_decoder/mp3_mad_wrapper.c
-    ${TOP_DIR}/library/source/audio_decoder/mp3_decoder.c
-    ${TOP_DIR}/library/source/audio_decoder/aac_helix_wrapper.c
-    ${TOP_DIR}/library/source/audio_decoder/aac_decoder.c
-    ${TOP_DIR}/library/source/audio_decoder/m4a_decoder.c
-    ${TOP_DIR}/library/source/audio_decoder/wav_decoder.c
-    ${TOP_DIR}/library/source/audio_extractor/mp3_extractor.c
-    ${TOP_DIR}/library/source/audio_extractor/aac_extractor.c
-    ${TOP_DIR}/library/source/audio_extractor/m4a_extractor.c
-    ${TOP_DIR}/library/source/audio_extractor/wav_extractor.c
-    ${TOP_DIR}/library/source/liteplayer_adapter.c
-    ${TOP_DIR}/library/source/liteplayer_source.c
-    ${TOP_DIR}/library/source/liteplayer_parser.c
-    ${TOP_DIR}/library/source/liteplayer_debug.c
-    ${TOP_DIR}/library/source/liteplayer_main.c
-    ${TOP_DIR}/library/source/liteplayer_listplayer.c
-    ${TOP_DIR}/library/source/liteplayer_ttsplayer.c)
+    ${TOP_DIR}/src/esp_adf/audio_element.c
+    ${TOP_DIR}/src/esp_adf/audio_event_iface.c
+    ${TOP_DIR}/src/audio_decoder/mp3_mad_wrapper.c
+    ${TOP_DIR}/src/audio_decoder/mp3_decoder.c
+    ${TOP_DIR}/src/audio_decoder/aac_helix_wrapper.c
+    ${TOP_DIR}/src/audio_decoder/aac_decoder.c
+    ${TOP_DIR}/src/audio_decoder/m4a_decoder.c
+    ${TOP_DIR}/src/audio_decoder/wav_decoder.c
+    ${TOP_DIR}/src/audio_extractor/mp3_extractor.c
+    ${TOP_DIR}/src/audio_extractor/aac_extractor.c
+    ${TOP_DIR}/src/audio_extractor/m4a_extractor.c
+    ${TOP_DIR}/src/audio_extractor/wav_extractor.c
+    ${TOP_DIR}/src/liteplayer_adapter.c
+    ${TOP_DIR}/src/liteplayer_source.c
+    ${TOP_DIR}/src/liteplayer_parser.c
+    ${TOP_DIR}/src/liteplayer_debug.c
+    ${TOP_DIR}/src/liteplayer_main.c
+    ${TOP_DIR}/src/liteplayer_listplayer.c
+    ${TOP_DIR}/src/liteplayer_ttsplayer.c)
 add_library(liteplayer_core STATIC ${LITEPLAYER_SRC})
 target_compile_options(liteplayer_core PRIVATE
     -Wno-error=int-to-pointer-cast
@@ -83,7 +83,7 @@ target_compile_options(liteplayer_core PRIVATE
     -DLITEPLAYER_CONFIG_AAC_SBR
     #sink: don't config it if sink support S24LE/S32LE
     -DLITEPLAYER_CONFIG_SINK_FIXED_S16LE)
-target_include_directories(liteplayer_core PRIVATE ${TOP_DIR}/thirdparty/codecs ${TOP_DIR}/library/source)
+target_include_directories(liteplayer_core PRIVATE ${TOP_DIR}/thirdparty/codecs ${TOP_DIR}/src)
 
 # sysutils files
 set(SYSUTILS_SRC
