Remove "-Werror" compile option

--- a/example/esp32/components/liteplayer_adapter/CMakeLists.txt
+++ b/example/esp32/components/liteplayer_adapter/CMakeLists.txt
@@ -17,4 +17,4 @@ set(COMPONENT_SRCS
 
 register_component()
 
-target_compile_options(${COMPONENT_TARGET} PRIVATE -O3 -Wall -Werror)
+target_compile_options(${COMPONENT_TARGET} PRIVATE -O3 -Wall)
