--- a/example/esp32/components/sysutils/CMakeLists.txt
+++ b/example/esp32/components/sysutils/CMakeLists.txt
@@ -24,4 +24,4 @@ set(COMPONENT_SRCS
 register_component()
 
 target_compile_options(${COMPONENT_TARGET} PRIVATE
-    -O3 -Wall -Werror -DOS_RTOS -DOS_FREERTOS_ESP32 -DSYSUTILS_HAVE_MBEDTLS_ENABLED)
+    -O3 -Wall -DOS_RTOS -DOS_FREERTOS_ESP32 -DSYSUTILS_HAVE_MBEDTLS_ENABLED)
