--- a/example/esp32/main/CMakeLists.txt
+++ b/example/esp32/main/CMakeLists.txt
@@ -2,4 +2,4 @@ set(COMPONENT_SRCS app_main.c)
 
 register_component()
 
-target_compile_options(${COMPONENT_TARGET} PRIVATE -O3 -Wall -Werror)
+target_compile_options(${COMPONENT_TARGET} PRIVATE -O3 -Wall)
